# rust-experiments

./: .editorconfig  .gitignore  Cargo.toml  flake.nix
src/: main.rs
