[package]
name = "rust-experiments"
version = "0.1.0"
edition = "2021"
authors = ["Egor Ternovoy <cofob@riseup.net>"]

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"
image = "0.24.4"
crossbeam = "0.8.2"
num_cpus = "1.13.1"

[profile.dev]
codegen-units = 256
incremental = true
opt-level = 0
debug = true

[profile.release]
debug-assertions = false
overflow-checks = false
incremental = false
opt-level = 3
panic = 'unwind'
debug = false
strip = true
lto = true
